--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set-option -g default-terminal "xterm-256color"
 # Use emacs / readline key-bindings in the tmux command prompt
 set-option -g status-keys "emacs"
 
-set-option -g status-right " #(hostname) - #(date '+%a, %b %d - %H:%M') "
+set-option -g status-right "#[bold]#(hostname)#[default] #(date '+%a, %b %d - %H:%M')"
 
 # Create new panes with paths inherited from the current pane
 bind-key - split-window -v -c "#{pane_current_path}"
